Yet another style fix

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -39,6 +39,7 @@
             <ul>
                 <li>Bugs Chasing</li>
                 <li>UI Revamp</li>
+                <li>Footer</li>
                 <li>Equipment Location and Map Display</li>
                 <li>Equipment Images Slideshow</li>
             </ul>
@@ -47,8 +48,11 @@
         <div>
             <strong>Todo: </strong>
             <ul>
+                <li>Help page: user manual, lab manager upload guide</li>
+                
+                <li>More bug fixes...</li>
                 <li>User Registration</li>
-                <li>Footer, terms of use, help page...</li>
+                <li>Terms of use, help page...</li>
                 <li>Adds custom support for category</li>
                 <li>Mobile UI</li>
                 <li>Add feedback options</li>
