--- a/web/static/css/sidebar.css
+++ b/web/static/css/sidebar.css
@@ -9,13 +9,25 @@
     align-content: flex-start;
     background: var(--main-bg-color);
     border-right: 1px solid var(--border-color);
-    font-size: 1.1em;
 }
 
-.sidebar-catNav__wrapper {
+.sidebar-catNav {
     height: 200px;
     display: flex;
     flex-wrap: wrap;
+}
+
+/* The "Search by category" text */
+.sidebar-catNav h2 { 
+    height: 20px;
+    margin: 20px 30px; 
+    font-size: 1.1em;
+    font-weight: normal;
+}
+
+.sidebar-catNav p {
+    margin: 10px 40px;
+    cursor: default;
 }
 
 .sidebar-catNav__cat {
