fixed clear behavior in dropdown

--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -49,10 +49,9 @@
             <strong>Todo: </strong>
             <ul>
                 <li>Help page: user manual, lab manager upload guide</li>
-                
+                <li>With these databases, we should be welcoming of input from users. It could be that we didn’t know that a particular machine or technique can be used with a particular material, or vice-versa. Can you add something that allows users to suggest changes or modifications on each page?</li>
                 <li>More bug fixes...</li>
                 <li>User Registration</li>
-                <li>Terms of use, help page...</li>
                 <li>Adds custom support for category</li>
                 <li>Mobile UI</li>
                 <li>Add feedback options</li>
