--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -21,6 +21,7 @@
     <span></span>    
     <div><a href="/">Search</a></div>
     <div><a href="/about">About</a></div>
+    <div><a href="/help">Help</a></div>
     {% if logged_in_user %}
     <div><a href="/user/{{ logged_in_user[0] }}">{{ logged_in_user[1] }}</a></div>
     <div><a href="/fetch/logout">Logout</a></div>
