--- a/web/static/css/dropdown.css
+++ b/web/static/css/dropdown.css
@@ -3,7 +3,7 @@
     position: absolute;
     top: 140px;
     left: 250px;
-    height: 450px;
+    min-height: 450px;
     display: none;
     border: 1px solid var(--border-color);
     border-left: 0;
