--- a/web/templates/developer.html
+++ b/web/templates/developer.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/details.css') }}">
 {% endblock %}
 
-{% block header %}About{% endblock %}
+{% block header %}Developer's Log{% endblock %}
 
 {% block content %}
 
@@ -17,12 +17,12 @@
         </a>
     </div>
 
+    <h1>Developer's Log</h1>
 
-    <h1>About</h1>
 
     <div class="details-full details-container">
         <div>
-            <strong>Finished: </strong>
+            <h2>Completed Features</h2>
             <ul>
                 <li>Search by category</li>
                 <li>Search by keywords</li>
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-            <strong>Update (May 13):</strong>
+            <h2>Update (May 13)</h2>
             <ul>
                 <li>Bugs Chasing</li>
                 <li>UI Revamp</li>
@@ -46,7 +46,18 @@
         </div>
 
         <div>
-            <strong>Todo: </strong>
+            <h2>Update (Jun 21)</h2>
+            <ul>
+                <li>Bugs Chasing</li>
+                <li>Fixed search functions</li>
+                <li>Help page</li>
+                <li>Feedback button</li>
+                <li>Customizable categories</li>
+            </ul>
+        </div>
+
+        <div>
+            <h2>Todo</h2>
             <ul>
                 <li>Help page: user manual, lab manager upload guide</li>
                 <li>With these databases, we should be welcoming of input from users. It could be that we didn’t know that a particular machine or technique can be used with a particular material, or vice-versa. Can you add something that allows users to suggest changes or modifications on each page?</li>
