--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -28,6 +28,8 @@
         <button class="top-searchButton top-button" id="top-searchButton">Search</button>
     </div>
 
+    <span class="top"></span>
+
 </section>
 
 
@@ -72,5 +74,12 @@
 
 <section class="result">
 </section>
+
+<div class="help-feedback">
+    <!-- <div><a href='mailto:zqiu@uchicago.edu'>Feedback</a></div>
+    <div><a href='/help'>Help</a></div> -->
+    <a id="help" href='mailto:zqiu@uchicago.edu'>Feedback</a>
+    <a id="feedback" href='/help#help-search'>Help</a>
+</div>
 
 {% endblock %}
