--- a/web/static/css/details.css
+++ b/web/static/css/details.css
@@ -13,6 +13,7 @@
     align-items: flex-start;
     align-content: flex-start;
     line-height: 1.5em;
+    padding-bottom: 0;
 }
 
 .details h1 {
@@ -21,7 +22,7 @@
     margin: 50px 0;
 }
 
-.details strong {
+.details h2 {
     font-size: 1.3em;
     font-weight: normal;
     line-height: 2em;
