--- a/web/static/css/sidebar.css
+++ b/web/static/css/sidebar.css
@@ -26,7 +26,7 @@
 }
 
 .sidebar-catNav p {
-    margin: 10px 40px;
+    margin: auto 40px;
     cursor: default;
 }
 
@@ -89,3 +89,7 @@
     margin: auto;
 }
 
+
+@media only screen and (max-width: 992px) {
+
+}
