--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block header %}{% endblock %} - IME Inventory DB</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/overlay.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
     <script defer src="{{ url_for('static', filename='js/base.js') }}"></script>
     {% block stylesheet %}{% endblock %}
     {% block script %}{% endblock %}
@@ -20,7 +20,6 @@
 <section class="navbar">
     <span></span>    
     <div><a href="/">Search</a></div>
-    <div><a href="/about">About</a></div>
     <div><a href="/help">Help</a></div>
     {% if logged_in_user %}
     <div><a href="/user/{{ logged_in_user[0] }}">{{ logged_in_user[1] }}</a></div>
@@ -65,6 +64,7 @@
 
 {% block content %}
 {% endblock %}
+
 
 
 <section class="footer">
