--- a/web/templates/help.html
+++ b/web/templates/help.html
@@ -51,7 +51,7 @@
                 <li>Press "Submit" to search or "Clear" to clear your selections.</li>
             </ol>
 
-            <h3>Clearing selections</h3>
+            <h3>Clear selections</h3>
             <p>To reset selections and search results, click the "Clear" button under categories
                 or click the logo at top left.</p>            
         </div>
