--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -19,7 +19,7 @@
 
 <section class="top">
     <div class=" top top-logo">
-        <a href="\"><img src="{{ url_for('static', filename='assets/logo_full.png') }}" alt="Logo"></a>
+        <a><img id='top-logo' src="{{ url_for('static', filename='assets/logo_full.png') }}" alt="Logo"></a>
     </div>
 
     <div class="top top-search__wrapper">
@@ -78,7 +78,7 @@
 <div class="help-feedback">
     <!-- <div><a href='mailto:zqiu@uchicago.edu'>Feedback</a></div>
     <div><a href='/help'>Help</a></div> -->
-    <a id="help" href='mailto:zqiu@uchicago.edu'>Feedback</a>
+    <a id="help" href='mailto:zqiu@uchicago.edu?subject=PME Equipment Database Feedback'>Feedback</a>
     <a id="feedback" href='/help#help-search'>Help</a>
 </div>
 
