--- a/web/static/css/overlay.css
+++ b/web/static/css/overlay.css
@@ -11,7 +11,6 @@
 
 .overlay-detail {
     max-width: 300px;
-    /* max-height: 500px; */
     background: var(--main-bg-color);
     opacity: 100%;
     margin: 80px auto;
@@ -23,7 +22,6 @@
 }
 
 .overlay-detail div {
-    width: calc(100%-40px);
     margin: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -58,18 +56,37 @@
     margin-top: 2px;
 }
 
-#cancel-btn {
-    width: 30px;
-    height: 30px;
-    margin-right: -20px;
-    margin-top: -20px;
-    background-color: transparent;
-    border: 0px;
-    font-size: 120%;
-    color: grey;
+.overlay-detail a {
+    cursor: pointer;
 }
 
-#login-fail {
+.overlay-detail .register-block {
+    display: none;
+}
+
+#cancel-btn {
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border: 0px;
+    font-size: 140%;
+    color: grey;
+    float: right;
+}
+
+#return-btn {
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border: 0px;
+    font-size: 140%;
+    color: grey;
+    display: none;
+    float: left;
+}
+
+#login-fail, #confirmation-fail {
+    margin: 0 20px;
     display: none;
     color: tomato;
     margin-bottom: 2px;
