--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -32,9 +32,10 @@
 <section class="overlay" >
     <div class="overlay-detail">
         <form id="login-form">
+            <button type="button" id="return-btn">&#8249</button>
+            <button type="button" id="cancel-btn">&times</button>
             <div>
-                <h3>Welcome Back</h3>
-                <button type="button" id="cancel-btn">&times</button>
+                <h3 id="login-welcome">Welcome Back</h3>
             </div>
             
             <div>
@@ -44,21 +45,32 @@
 
             <div>
                 <label for="password">Password</label>
-                <input type="password" placeholder="Password" name="password" required>    
+                <input id="password" type="password" placeholder="Password" name="password" required>    
             </div>
 
-            <div>
-                <!-- <label class="remember" for="remember">Remember me</label>
-                <input class="remember" type="checkbox" name="remember"> -->
-                <p id="login-fail">Login failed. Please try again.</p>
+            <div class="register-block">
+                <label for="confirm-password">Confirm Password</label>
+                <input id="confirm-password" type="password" placeholder="Password" name="confirm-password" required>
+            </div> 
+
+            <div class="register-block">
+                <label for="access-code">Access Code</label>
+                <input type="text" placeholder="Access Code" name="access-code" required>
+            </div> 
+
+            <p id="login-fail">Login failed. Please try again.</p>
+            <p id="confirmation-fail">Passwords do not match. Please try again.</p>
+            
+            <div id="login-block">
                 <p><a>Forget password?</a></p>
-                <p><a>Register account</a></p>
+                <p id="register-switch"><a>Register account</a></p>
             </div>
           
             <div>
                 <button type="submit" id="login-btn">Login</button>
             </div>
           </form>
+
     </div>
 </section>
 
