--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block script %}
-<script defer src="{{ url_for('static', filename='js/search.js') }}"></script></script>
+<script defer src="{{ url_for('static', filename='js/search.js') }}"></script>
 {% endblock %}
 
 
