--- a/web/static/css/top.css
+++ b/web/static/css/top.css
@@ -2,14 +2,14 @@
 
 .top {
     width: 100%;
-    height: 140px;
+    height: 150px;
     display: flex;
     background: var(--main-bg-color);
     border-bottom: 1px solid var(--border-color);
 }
 
 .top-logo {max-width: 400px;}
-.top-logo a {margin: auto;}
+.top-logo a {margin: 20px;}
 .top-logo img {
     max-width: 400px;
     max-height: 120px;
@@ -19,7 +19,7 @@
     height: 28px;
     max-width: 600px;
     min-width: 290px;
-    margin: auto 0 auto 50px;
+    margin: 60px 0 auto 50px;
     border: 1px solid var(--border-color);
     border-radius: 7px 0 0 7px;
     flex-grow: 1;
@@ -30,7 +30,7 @@
 .top-searchButton {
     height: 50px;
     width: 90px;
-    margin: auto auto auto 0;
+    margin: 60px auto auto 0;
     border: 1px solid var(--border-color);
     border-left-width: 0;
     border-radius: 0 7px 7px 0;
