--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -29,13 +29,17 @@
 
     <div class="edit-block" id="edit-name">
         <h2>Name*</h2>
-        <input type="text" name="name" 
-            value="{% if equipment['name'] %}{{ equipment['name'] }}{% endif %}"/>
+        <input 
+            type="text" name="name" 
+            value="{% if equipment['name'] %}{{ equipment['name'] }}{% endif %}" 
+            required/>
     </div>
 
     <div class="edit-block" id="edit-overview">
         <label for="edit-overview"><h2>Overview*</h2></label>
-        <textarea type="text" name="overview">{% if equipment['overview'] %}{{ equipment['overview'] }}{% endif %}</textarea>
+        <textarea type="text" name="overview" required>
+            {% if equipment['overview'] %}{{ equipment['overview'] }}{% endif %}
+        </textarea>
     </div>
 
     <div class="edit-block" id="edit-images">
@@ -94,17 +98,17 @@
     <div class="edit-block" id="edit-contact">
         <h2>Contact*</h2>
         <ul>
-            <li><p>Name: </p><input type="text" name="contact-name" value="{{ equipment['contact']['name'] if equipment['contact'] }}"/></li>
-            <li><p>Email: </p><input type="text" name="contact-email" value="{{ equipment['contact']['email_link'] if equipment['contact'] }}"/></li>
-            <li><p>Title: </p><input type="text" name="contact-title" value="{{ equipment['contact']['title'] if equipment['contact'] }}"/></li>
-            <li><p>Tel: </p><input type="text" name="contact-tel" value="{{ equipment['contact']['tel'] if equipment['contact'] }}"/></li>
+            <li><p>Name: </p><input type="text" name="contact-name" value="{{ equipment['contact']['name'] if equipment['contact'] }}" required/></li>
+            <li><p>Email: </p><input type="text" name="contact-email" value="{{ equipment['contact']['email_link'] if equipment['contact'] }}" required/></li>
+            <li><p>Title: </p><input type="text" name="contact-title" value="{{ equipment['contact']['title'] if equipment['contact'] }}" required/></li>
+            <li><p>Tel: </p><input type="text" name="contact-tel" value="{{ equipment['contact']['tel'] if equipment['contact'] }}" required/></li>
         </ul>
     </div>
 
     <div class="edit-block" id="edit-category">
         <h2>Category*</h2>
         <input name="cat" class="edit-cat-input" id="edit-cat" 
-        value="{{ equipment['category'][0] if equipment['category'] }}"></input>
+        value="{{ equipment['category'][0] if equipment['category'] }}" required></input>
         <!-- <ul id="edit-cat-options">
             <li>Characterization</li>
             <li>Manufacturing</li>
@@ -112,7 +116,7 @@
         </ul> -->
         -
         <input name="bucket" class="edit-cat-input" id="edit-bucket" 
-        value="{{ equipment['category'][1] if equipment['category'] }}"></input>
+        value="{{ equipment['category'][1] if equipment['category'] }}" required></input>
         <!-- <ul id="edit-bucket-options">
             <li>Characterization</li>
             <li>Manufacturing</li>
@@ -123,13 +127,13 @@
         </ul> -->
         -
         <input name="item" class="edit-cat-input" id="edit-item" 
-        value="{{ equipment['category'][2] if equipment['category'] }}"></input>
+        value="{{ equipment['category'][2] if equipment['category'] }}" required></input>
     </div>
 
     <div class="edit-block" id="edit-campus">
         <h2>Campus*</h2>
         <input name="campus" class="edit-cat-select" id="edit-camp" 
-        value="{{ equipment['campus'][0] if equipment['campus'] }}">
+        value="{{ equipment['campus'][0] if equipment['campus'] }}" required>
             <!-- <option value="UChicago">UChicago</option>
             <option value="UIC">UIC</option>
             <option value="UIUC">UIUC</option>
@@ -137,7 +141,7 @@
         </input>
         -
         <input name="department" id="edit-subCamp" 
-        value="{{ equipment['campus'][1] if equipment['campus'] }}"></input>
+        value="{{ equipment['campus'][1] if equipment['campus'] }}" required></input>
     </div>
 
     <div class="edit-block"><h2>Fee</h2><input type="text" name="fee" value="{{ equipment['fee'] if equipment['fee']  }}"/></div>
